changed styles to stop horizontal scroll on mobile

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -164,7 +164,7 @@ p {
 @include u.for-phone-only {
   .App {
     text-align: left;
-    width: 100vw;
+    width: 98vw;
     padding: 0 2vw;
 
     .top-buttons {
@@ -176,7 +176,7 @@ p {
 @include u.for-tablet-portrait-up {
   .App {
     text-align: left;
-    width: 100vw;
+    width: 99vw;
     padding: 0 1vw;
   }
 
@@ -251,30 +251,6 @@ p {
     display: none;
     position: absolute;
     width: 5vw;
-  }
-  .aad {
-    right: 15%;
-    top: 32%;
-  }
-  .code {
-    right: 10%;
-    top: 74%;
-  }
-  .python {
-    right: 7%;
-    top: 126%;
-  }
-  .rasp {
-    left: 14%;
-    top: 22%;
-  }
-  .ps {
-    left: 10%;
-    top: 89%;
-  }
-  .react {
-    left: 8%;
-    top: 178%;
   }
 }
 
